src/objects/YS2__Yousign_Procedure__c.object
<CustomObject>
    <fields>
        <fullName>YS2__Date_of_cancellation__c</fullName>
        <label>Date of cancellation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>YS2__Date_of_signature__c</fullName>
        <label>Date of signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YS2__Date_of_submission__c</fullName>
        <label>Date of submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>YS2__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YS2__Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Yousign Procedures</relationshipLabel>
        <relationshipName>Yousign_Procedures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YS2__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YS2__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YS2__Signing_process_applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signing process applicant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Yousign_Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YS2__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YS2__Yousign_Procedure_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Yousign Procedure Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Yousign Procedure</label>
    <nameField>
        <displayFormat>YP-{00000}</displayFormat>
        <label>Yousign Procedure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yousign Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>